# atrium

./: .drone.yml  .gitignore  .pre-commit-config.yaml  .talismanrc  README.md  shell.nix
0_archive/: test.yaml
0_archive/alertmanager/: application.yaml
0_archive/authelia/: Chart.yaml
0_archive/coroot/: application.yaml
0_archive/headlamp/: Chart.yaml
0_archive/homer/: README.md  application.yaml
0_archive/keep/: Chart.yaml  nginx.yaml
0_archive/knative/: application.yaml
0_archive/kubeseal/: namespace.yaml
0_archive/netdata/: Chart.yaml  application.yaml
0_archive/tekton/: README.md
0_archive/theonepager/: Makefile  nginx.conf
0_archive/woodpecker/: namespace.yaml
charts/application/: Chart.yaml  Makefile  README.md  values.yaml
deployments/: check-versions.py
deployments/0_archive/dex/: Makefile
deployments/TRIAL/: README.md
deployments/applications/: application-secret-store.yaml  regcred-secret.yaml
deployments/argocd/: namespace.yaml
deployments/clickhouse/: namespace.yaml
deployments/drone/: namespace.yaml  regcred-secret.yaml
deployments/fission/: namespace.yaml
deployments/longhorn-system/: namespace.yaml
deployments/observability/: namespace.yaml
deployments/tooling/: namespace.yaml  regcred-secret.yaml
infrastructure-as-code/: Makefile  Pulumi.yaml  pyproject.toml
infrastructure-as-code/infrastructure/: __main__.py  config.py  consts.py
infrastructure-as-code/infrastructure/digitalocean/: __init__.py
infrastructure-as-code/infrastructure/github/: __init__.py
rke2-manifests/: rke2-ingress-nginx-config.yaml
(+221 files in other folders)
